fixed scrolling issue, and image not showing aws

--- a/imports/ui/slideGenerator/slides.css
+++ b/imports/ui/slideGenerator/slides.css
@@ -61,6 +61,12 @@
     text-shadow: none;
 }
 
+
+.reveal .slides {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .reveal .slides>section,
 .reveal .slides>section>section {
     line-height: 1.3;
